@@ -8159,6 +8159,7 @@ filegroup {
     "src/tracing/event_context.cc",
     "src/tracing/interceptor.cc",
     "src/tracing/internal/interceptor_trace_writer.cc",
+    "src/tracing/internal/tracing_muxer_fake.cc",
     "src/tracing/internal/tracing_muxer_impl.cc",
     "src/tracing/internal/track_event_internal.cc",
     "src/tracing/platform.cc",
