@@ -104,6 +104,8 @@ source_set("client_api_without_backends") {
     "event_context.cc",
     "interceptor.cc",
     "internal/interceptor_trace_writer.cc",
+    "internal/tracing_muxer_fake.cc",
+    "internal/tracing_muxer_fake.h",
     "internal/tracing_muxer_impl.cc",
     "internal/tracing_muxer_impl.h",
     "internal/track_event_internal.cc",
