@@ -1,6 +1,7 @@
 Unreleased:
   Tracing service and probes:
-    *
+    * Print more helpful error messages if the client library is used without
+      having been initialized.
   Trace Processor:
     *
   UI:
